syntax = "proto2";

option go_package = "accommodation_booking/common/profile";

package profile;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


service ProfileService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/profile/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/profile"
    };
  }
  rpc Create(CreateRequest) returns(CreateResponse) {
    option (google.api.http) = {
      post: "/profile"
      body: "profile"
    };
  }
  rpc Update(UpdateRequest) returns(UpdateResponse) {
    option (google.api.http) = {
      put: "/profile/{id}"
      body: "profile"
    };
  }
  rpc Delete(DeleteRequest) returns(DeleteResponse) {
    option (google.api.http) = {
      delete: "/profile/{id}"
    };
  }
  rpc GenerateToken(GenerateTokenRequest) returns(GenerateTokenResponse) {
    option (google.api.http) = {
      get: "/profile/{id}/token"
    };
  }

  rpc GetByToken(GetByTokenRequest) returns(GetByTokenResponse) {
    option (google.api.http) = {
      get: "/profile/token/{token}"
    };
  }

}

message GetRequest {
  required string id = 1;
}

message GetResponse {
  required Profile profile = 1;
}

message GetAllRequest {
  required string search = 1;
}

message GetAllResponse {
  repeated Profile profiles = 1;
}

message CreateRequest {
  required Profile profile = 1;
}

message CreateResponse {
  required Profile profile = 1;
}

message UpdateRequest {
  required string id = 1;
  required Profile profile = 2;
}

message UpdateResponse {
  required Profile profile = 1;
}

message DeleteRequest {
  required string id = 1;
}

message DeleteResponse {
}

message GenerateTokenRequest {
  required string id = 1;
}

message GenerateTokenResponse {
  required string token = 1;
}

message GetByTokenRequest {
  required string token = 1;
}

message GetByTokenResponse {
  required Profile profile = 1;
}

message Profile {
  required string id = 1 [default = ""];
  optional string username = 2 [default = ""];
  optional string firstName = 3 [default = ""];
  optional string lastName = 4 [default = ""];
  optional string email = 5 [default = ""];
  optional Address address = 6;
  optional google.protobuf.Timestamp dateOfBirth = 7;
  optional string phoneNumber = 8 [default = ""];
  optional string gender = 9 [default = ""];
  optional string token = 10 [default = ""];
}

message Address {
  optional string country = 1 [default = ""];
  optional string city = 2 [default = ""];
  optional string street = 3 [default = ""];
}
message Search {
  required string search = 1;
}